--- a/index.html
+++ b/index.html
@@ -330,7 +330,88 @@ ul>.class
 缩写：input:image
 	<input type="image" src="" alt="">
 
-	
+缩写： input:button
+	<input type="button" value="
+	">
+
+缩写：isindex
+	<isindex>
+
+缩写：input:reset
+	<input type="reset" value="">
+
+缩写：select
+	<select name="" id=""></select>
+
+缩写：textarea
+	<textarea name="" id="" cols="30" rows="10"></textarea>
+
+缩写：option
+	<option value=""></option>
+
+缩写:menu:context
+	<menu type="context"></menu>
+
+缩写：menu:toolbar
+	<menu type="toolbar"></menu>
+
+缩写：video
+	<video src=""></video>
+
+缩写：audio
+	<audio src=""></audio>
+
+缩写：html:xml
+	<html xmlns="http://www.w3.org/1999/xhtml"></html>
+
+缩写：keygen
+	<keygen>
+
+缩写：command
+	<command>
+
+缩写：bq
+	<blockquote></blockquote>
+
+缩写:acr
+	<acronym title=""></acronym>
+
+缩写：fig
+	<figure></figure>
+
+缩写：figc
+	<figcaption></figcaption>
+
+缩写：ifr
+	<iframe src="" frameborder="0"></iframe>
+
+缩写：emb
+	<embed src="" type="">
+
+缩写：obj
+	<object data="" type=""></object>
+
+缩写：src
+	<source>
+
+缩写：cap
+	<caption></caption>
+
+缩写：colg
+	<colgroup></colgroup>
+
+缩写：fst,fset
+	<fieldset></fieldset>
+
+缩写：btn
+	<button></button>
+
+缩写：btn:b
+	<button type="button"></button>
+
+
+
+
 
 </body>
 </html>
